RESOLVED FIXED203537
Notification permissions are not remembered for origins without port
https://bugs.webkit.org/show_bug.cgi?id=203537
Summary Notification permissions are not remembered for origins without port
Chris Dumez
Reported 2019-10-28 16:19:25 PDT
Notification permission are not remembered for origins without port.
Attachments
Patch (10.90 KB, patch)
2019-10-28 16:26 PDT, Chris Dumez
no flags
Patch (10.90 KB, patch)
2019-10-28 16:27 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-10-28 16:19:34 PDT
Chris Dumez
Comment 2 2019-10-28 16:26:33 PDT
Chris Dumez
Comment 3 2019-10-28 16:27:31 PDT
Chris Dumez
Comment 4 2019-10-29 09:57:15 PDT
Comment on attachment 382133 [details] Patch Clearing flags on attachment: 382133 Committed r251709: <https://trac.webkit.org/changeset/251709>
Chris Dumez
Comment 5 2019-10-29 09:57:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.