Notification permissions are not remembered for origins without port https://bugs.webkit.org/show_bug.cgi?id=203537 <rdar://problem/55281080>

Reviewed by Brady Eidson.

Source/WebKit:

When WKSecurityOriginCreate() gets called with a port that is invalid, then pass
WTF::nullopt to construct the security origin instead of the invalid port.

The issue is that the port for security origins is optional internally. However,
our API (WKSecurityOriginGetPort() & WKSecurityOrigin.port) will return 0 when
there is no port. As a result, clients such as Safari sometimes pass 0 as port to construct
a new WKSecurityOriginRef().

This was causing issues with regards to notifications because Safari would construct
origins whose string representation looks like "https://www.apple.com:0" and it would
not match the "https://www.apple.com" we expect internally.

* Shared/API/c/WKSecurityOriginRef.cpp:
(WKSecurityOriginCreate):

Tools:

Add API test coverage.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit/WKSecurityOrigin.cpp: Added.
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/216933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251709 268f45cc-cd09-0410-ab3c-d52691b4dbfc